--- a/FourCePhase2.1AKI/DESCRIPTION
+++ b/FourCePhase2.1AKI/DESCRIPTION
@@ -21,6 +21,7 @@ Imports:
     RcppRoll (>= 0.3.0),
     zoo (>= 1.8-8),
     survival (>= 3.1-12),
-    survminer (>= 0.4.8)
+    survminer (>= 0.4.8),
+    magrittr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
