--- a/FourCePhase2.1AKI/DESCRIPTION
+++ b/FourCePhase2.1AKI/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: FourCePhase2.1AKI
 Title: 4CE Consortium for COVID-19 - Acute Kidney Injury - Statistical Analysis Package
-Version: 0.0.1.0000
+Version: 0.0.1.1000
 Authors@R: 
     person(given = "Byorn",
            family = "Tan",
@@ -22,6 +22,7 @@ Imports:
     zoo (>= 1.8-5),
     survival (>= 2.4-0),
     survminer (>= 0.4.3),
+    table1 (>= 1.1),
     magrittr
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
