--- a/FourCePhase2.1AKI/DESCRIPTION
+++ b/FourCePhase2.1AKI/DESCRIPTION
@@ -13,7 +13,8 @@ Encoding: UTF-8
 LazyData: true
 Imports:
     dplyr (>= 1.0.0),
-    tidyr (>= 1.0.0),
+    tidyr (>= 1.1.0),
+    readr (>= 1.3.0),
     purrr (>= 0.3.0),
     ggplot2 (>= 3.0.0),
     tibble (>= 3.0.0),
