--- a/FourCePhase2.1AKI/DESCRIPTION
+++ b/FourCePhase2.1AKI/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: FourCePhase2.1AKI
 Title: 4CE Consortium for COVID-19 - Acute Kidney Injury - Statistical Analysis Package
-Version: 0.0.1.3
+Version: 0.1.4.1
 Authors@R: 
     person(given = "Byorn",
            family = "Tan",
@@ -22,7 +22,8 @@ Imports:
     RcppRoll (>= 0.3.0),
     zoo (>= 1.8-5),
     survival (>= 2.4-0),
-    survminer (>= 0.4.3),
+    survminer (>= 0.4.8),
+    broom (>=0.7.5),
     tableone,
     magrittr
 Roxygen: list(markdown = TRUE)
