--- a/FourCePhase2.1AKI/DESCRIPTION
+++ b/FourCePhase2.1AKI/DESCRIPTION
@@ -16,6 +16,7 @@ Imports:
     tidyr (>= 1.1.0),
     readr (>= 1.3.0),
     purrr (>= 0.3.0),
+    stringr (>= 1.4.0),
     ggplot2 (>= 3.0.0),
     tibble (>= 3.0.0),
     data.table (>= 1.12.2),
